--- a/src/style/style.css
+++ b/src/style/style.css
@@ -97,11 +97,19 @@ body {
     padding-top: 2em;
 }
 
+h1 {
+    text-align: center;
+    font-size: 1.5rem;
+    position: absolute;
+    padding-top: 1em;
+    top: 0;
+}
+
 .pomodoroTimmer {
     width: calc(8rem + 5vw);
     height: calc(8rem + 5vw);
     gap: 0.5em;
-    background: linear-gradient(180deg, #EDE3E3 0%, rgba(141, 72, 72, 0) 100%);
+    background: linear-gradient(180deg, #cccac3 0%, rgba(16, 16, 16, 0) 100%);
 }
 
 .pomodoroCycle {
@@ -109,7 +117,7 @@ body {
     padding: 5% 0;
     margin: 1em 0;
     flex-wrap: wrap;
-    gap: calc(0.2em + 0.5vw)
+    gap: calc(0.2em + 0.5vw);
 }
 
 .pomodoroCycle img {
